--- a/frontend/src/sass/_custom.scss
+++ b/frontend/src/sass/_custom.scss
@@ -9,9 +9,9 @@ $theme-secondary: #0dcaf0;
 $theme-green: #4caf50;
 $theme-purple: rgb(143, 0, 199);
 $theme-orange: orange;
+$success: rgb(6, 167, 0);
 
 $sidebar-width: 400px;
-
 
 .bg-dark {
     background-color: $dark !important;
